log
Wed, Mar 19, 2025  8:53:09 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:14:20 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
0c89ede
Wed, Mar 19, 2025  9:42:32 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:8: error: unused variable 'talla' [-Werror=unused-variable]
    int talla = get_size(L);
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
122523a
Wed, Mar 19, 2025  9:42:39 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9956b29
Sat, Mar 22, 2025  2:46:30 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
d1bdb64
Sat, Mar 22, 2025  2:47:58 PM: 
bash: gcc: command not found
Compilation failed
e509354
Sat, Mar 22, 2025  2:48:48 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
dd36424
Sat, Mar 22, 2025  3:32:28 PM: 
 tests:  2|3
total_score: 20/70
583a7c6
